--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ a {
   cursor: pointer;
 }
 
+body {
+  font-family: "Kanit", sans-serif;
+}
+
 .nav {
   background-color: #f4f7fb;
 }
@@ -26,4 +30,31 @@ a {
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
+  padding: 1em 0;
+}
+.nav__center ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+.nav__center ul li {
+  padding-left: 2em;
+}
+.nav__center ul li a {
+  color: #000;
+  padding: 1em;
+}
+.nav__center ul li a:hover {
+  background-color: #eea539;
+  color: #fff;
+}
+.nav__right ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+.nav__right ul li {
+  padding-left: 2em;
 }
