--- a/css/utilities/_mixins.scss
+++ b/css/utilities/_mixins.scss
@@ -1,6 +1,6 @@
 @mixin flex($justify,$align,$direction:row){
 display: flex;
 justify-content: $justify;
-align-items: $align;
+text-align: $align;
 flex-direction: $direction;
 }
