styled the right hero section

--- a/css/home/_hero.scss
+++ b/css/home/_hero.scss
@@ -58,4 +58,11 @@
          }
         }
     }
+    &__right{
+        padding-top: 2em;
+        &__img{
+            @include flex(space-between,center);
+            gap: 1em;
+        }
+    }
 }
