--- a/css/style.css
+++ b/css/style.css
@@ -209,11 +209,12 @@ body {
   color: #eea539;
 }
 .about h2 {
-  padding: 2em 1em;
+  padding: 1em 0.4em;
+  font-size: 3rem;
 }
 .about p {
-  padding-left: 1em;
-  font-weight: bold;
+  padding: 0 0 1em 1.2em;
+  font-size: 1.5rem;
 }
 .about__container {
   display: flex;
@@ -227,8 +228,8 @@ body {
   justify-content: space-evenly;
   text-align: center;
   flex-direction: column;
-  background-color: rgba(92, 92, 92, 0.397);
-  height: 98vh;
+  background-color: #f4f7fb;
+  height: 76vh;
 }
 .about__container__content__qualities {
   display: flex;
@@ -253,6 +254,8 @@ body {
   background-color: #000;
   border-radius: 50%;
   padding: 1em;
+  width: 7vw;
+  height: 11vh;
 }
 .about__container__content__qualities div {
   text-align: left;
