created the markup for the contsct us section

--- a/css/home/_hero.scss
+++ b/css/home/_hero.scss
@@ -178,3 +178,17 @@
         }
     }
 }
+
+
+.contact{
+    text-align: center;
+    &__container{
+        &__images{
+            @include flex(space-around,center);
+        }
+        &__details{
+            @include flex(space-between,center);
+            font-size: 2rem;
+        }
+    }
+}
