styled the contact us section

--- a/css/home/_hero.scss
+++ b/css/home/_hero.scss
@@ -181,6 +181,16 @@
 
 
 .contact{
+    padding: 3em 0;
+    span{
+        color: $orange;
+    }
+    p{
+        padding: 1em;
+    }
+    h2{
+        padding: 1em;
+    }
     text-align: center;
     &__container{
         &__images{
