--- a/css/layout/_footer.scss
+++ b/css/layout/_footer.scss
@@ -3,21 +3,62 @@
 
 
 .footer{
-    background-color: $black;
-    color: $white;
+        color: white;
+    background-color: black;
+    padding: 3em 0;
+    h3{
+        font-size: 1.5rem;
+    }
+    p{
+        font-size: 2rem;
+        text-align: left;
+    }
     &__container{
         @include flex(space-between,center);
-        &__socials{
-            &__left{              
-                @include flex(space-between,center);
-            }
-        }
+    }
         &__center{
             ul{
                 li{
-                    color: $white;
+                    a{
+                        color: white;
+                    }
                 }
             }
         }
-    }
+        &__right{
+            form{
+                margin: 3em 0;
+                font-size: 0;
+                input{
+                    padding: 2em;
+                    border: none;
+                    outline: none;
+                    border-top-left-radius: 5px;
+                    border-bottom-left-radius: 5px;
+                }
+                button{
+                    color: white;
+                    background-color: orange;
+                    padding: 2em;   
+                    border: none;
+                    border-top-right-radius: 5px;
+                    border-bottom-right-radius: 5px;
+                }
+            }
+        }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
