--- a/css/home/_hero.scss
+++ b/css/home/_hero.scss
@@ -19,16 +19,17 @@
         }
         &__search{
             @include flex(center,center);
-            width: 50%;
             border-radius: 10px;
             margin: 2em 0;
             border: 2px solid $black;
             form{
                 width: 100%;
                 input{
+                    margin-top: 1.5em;
                     font-size: 1em;
                     border: none;
-                    width: 60%;
+                    outline: none;
+                    width: 90%;
                 }
             }
             button{
@@ -36,10 +37,12 @@
                 background-color: $black;
                 color: $white;
                 border: $black;
-                width: 20%;
+                border-top-right-radius: 5px;
+                border-bottom-right-radius: 5px;
                 }
             i{
-                width: 5%;
+                margin-top: 1.5em;
+                width: 10%;
             }
         }
         &__stats{
@@ -67,140 +70,6 @@
     }
 }
 
-.menu{
-    &--orange{
-        color: $orange;
-    }
-    text-align: center;
-    &__list{
-        width: 90%;
-        margin: 0 auto;
-        border-bottom: 2px solid $grey;
-        ul{
-            @include flex(space-around,center);
-            li{
-                a{
-                    h3{
-                        padding: 2em 0;
-                    }
-                    &:hover{
-                        border-bottom: 5px solid $orange;
-                        color: $orange;
-                    }
-                }
-            }
-        }
-    }
-    &__container{
-        @include flex(space-between,center);
-        margin-top: 2.5em;
-        div{
-            button{
-                font-size: 1rem;
-                background-color: $black;
-                color: white;
-                border: black;
-                padding: 1em 4em;
-                margin-top: -1em;
-                font-weight: bold;
-            }
 
-        }
-        &__variety{
-            width: 20vw;
-            background-color: $light-grey;
-            padding: 2em;
-            padding-top: 10em;
-            margin-top: -10em;
-            p{
-                padding: 1em 0;
-                color: $grey;
-            }
-        }
-    }
-
-    button{
-        color: $white;
-        background-color: $orange;
-        font-size: 1rem;
-        border: none;
-        padding: 1em 4em;
-        font-weight: bold;
-        border-radius: 5px;
-        margin: 3em 0;
-    }
-}
-
-.about{
-    margin: 6em 0;
-    span{
-        color: $orange; 
-    }
-        h2{
-            padding: 1em .4em;
-            font-size: 3rem;
-        }
-        p{
-            padding: 0 0 1em 1.2em;
-            font-size: 1.5rem;
-        }
-    &__container{
-        @include flex(space-between,center);
-        text-align: left;
-        &__content{
-            @include flex(space-evenly,center,column);
-            background-color: $light-grey;
-            // height:72vh;
-            &__qualities{
-                @include flex(space-between,center);
-                background-color: $white;
-                width: 90%;
-                margin: 0 auto;
-                padding: 1em;
-                border-radius: 10px;
-                text-align: left;
-                p{
-                    color: $grey;
-                }
-                &__img{
-                    @include flex(center,center);
-                    background-color: $black;
-                    border-radius: 50%;
-                    padding: 1em;
-                    width: 7vw;
-                    height: 11vh;
-                }
-                div{
-                    text-align: left;
-                }
-            }
-    
-        }
-    }
-}
-
-
-.contact{
-    padding: 3em 0;
-    span{
-        color: $orange;
-    }
-    p{
-        padding: 1em;
-    }
-    h2{
-        padding: 1em;
-    }
-    text-align: center;
-    &__container{
-        &__images{
-            @include flex(space-around,center);
-        }
-        &__details{
-            @include flex(space-between,center);
-            font-size: 2rem;
-        }
-    }
-}
 
 
