--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,6 @@ body {
   justify-content: center;
   text-align: center;
   flex-direction: row;
-  width: 50%;
   border-radius: 10px;
   margin: 2em 0;
   border: 2px solid #000;
@@ -138,19 +137,23 @@ body {
   width: 100%;
 }
 .hero__left__search form input {
+  margin-top: 1.5em;
   font-size: 1em;
   border: none;
-  width: 60%;
+  outline: none;
+  width: 90%;
 }
 .hero__left__search button {
   padding: 2em;
   background-color: #000;
   color: #fff;
   border: #000;
-  width: 20%;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 .hero__left__search i {
-  width: 5%;
+  margin-top: 1.5em;
+  width: 10%;
 }
 .hero__left__stats {
   display: flex;
@@ -182,6 +185,161 @@ body {
   text-align: center;
   flex-direction: row;
   gap: 1em;
+}
+
+.shop {
+  padding-top: 3em;
+}
+.shop__list {
+  border-bottom: 2px solid rgba(92, 92, 92, 0.397);
+  width: 90%;
+  margin: 0 auto;
+}
+.shop__list ul {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  flex-direction: row;
+}
+.shop__list ul li {
+  padding: 1em 0;
+}
+.shop__list ul li a {
+  padding: 2m 0;
+}
+.shop__list ul li a:hover {
+  color: #eea539;
+  border-bottom: 3px solid #eea539;
+}
+.shop__container {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  flex-direction: row;
+  margin-top: 2.5em;
+}
+.shop__container div {
+  margin-left: 1em;
+}
+.shop__container div img {
+  text-align: center;
+}
+.shop__container div button {
+  font-size: 1rem;
+  background-color: #000;
+  color: white;
+  border: black;
+  padding: 1em 4em;
+  margin-top: -1em;
+  font-weight: bold;
+}
+.shop__container__variety {
+  width: 18vw;
+  background-color: #f4f7fb;
+  padding: 2em;
+  padding-top: 10em;
+  margin-top: -10em;
+}
+.shop__container__variety p {
+  padding: 1em 0;
+  color: rgba(92, 92, 92, 0.397);
+}
+
+.about {
+  margin: 6em 0;
+}
+.about span {
+  color: #eea539;
+}
+.about h2 {
+  padding: 1em 0.4em;
+  font-size: 3rem;
+}
+.about p {
+  padding: 0 0 1em 1.2em;
+  font-size: 1.5rem;
+}
+.about__container {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  flex-direction: row;
+  text-align: left;
+}
+.about__container__content {
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  flex-direction: column;
+  background-color: #f4f7fb;
+  gap: 4.7em 0;
+  padding: 3em;
+}
+.about__container__content__qualities {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  flex-direction: row;
+  background-color: #fff;
+  width: 90%;
+  margin: 0 auto;
+  padding: 1em;
+  border-radius: 10px;
+  text-align: left;
+}
+.about__container__content__qualities p {
+  color: rgba(92, 92, 92, 0.397);
+}
+.about__container__content__qualities__img {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-direction: row;
+  background-color: #000;
+  border-radius: 50%;
+  padding: 1em;
+  width: 7vw;
+  height: 11vh;
+}
+.about__container__content__qualities div {
+  text-align: left;
+}
+
+.contact {
+  padding: 3em 0;
+  text-align: center;
+}
+.contact span {
+  color: #eea539;
+}
+.contact p {
+  padding: 1em;
+}
+.contact h2 {
+  padding: 1em;
+}
+.contact__container__details {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  flex-direction: row;
+  font-size: 1.5rem;
+  margin-top: 3em;
+}
+.contact__container__details__info {
+  width: 30%;
+  background-color: #f4f7fb;
+}
+.contact__container__details__info__img {
+  background-color: #f4f7fb;
+  margin: 0 auto;
+  border-radius: 50%;
+  width: 10vh;
+  height: 10vh;
+  margin-top: -1.7em;
+}
+.contact__container__details__info__img img {
+  margin-top: 0.8em;
 }
 
 .menu {
@@ -244,147 +402,4 @@ body {
   font-weight: bold;
   border-radius: 5px;
   margin: 3em 0;
-}
-
-.about {
-  margin: 6em 0;
-}
-.about span {
-  color: #eea539;
-}
-.about h2 {
-  padding: 1em 0.4em;
-  font-size: 3rem;
-}
-.about p {
-  padding: 0 0 1em 1.2em;
-  font-size: 1.5rem;
-}
-.about__container {
-  display: flex;
-  justify-content: space-between;
-  text-align: center;
-  flex-direction: row;
-  text-align: left;
-}
-.about__container__content {
-  display: flex;
-  justify-content: space-evenly;
-  text-align: center;
-  flex-direction: column;
-  background-color: #f4f7fb;
-}
-.about__container__content__qualities {
-  display: flex;
-  justify-content: space-between;
-  text-align: center;
-  flex-direction: row;
-  background-color: #fff;
-  width: 90%;
-  margin: 0 auto;
-  padding: 1em;
-  border-radius: 10px;
-  text-align: left;
-}
-.about__container__content__qualities p {
-  color: rgba(92, 92, 92, 0.397);
-}
-.about__container__content__qualities__img {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  flex-direction: row;
-  background-color: #000;
-  border-radius: 50%;
-  padding: 1em;
-  width: 7vw;
-  height: 11vh;
-}
-.about__container__content__qualities div {
-  text-align: left;
-}
-
-.contact {
-  padding: 3em 0;
-  text-align: center;
-}
-.contact span {
-  color: #eea539;
-}
-.contact p {
-  padding: 1em;
-}
-.contact h2 {
-  padding: 1em;
-}
-.contact__container__images {
-  display: flex;
-  justify-content: space-around;
-  text-align: center;
-  flex-direction: row;
-}
-.contact__container__details {
-  display: flex;
-  justify-content: space-between;
-  text-align: center;
-  flex-direction: row;
-  font-size: 2rem;
-}
-
-.shop {
-  padding-top: 3em;
-}
-.shop__list {
-  border-bottom: 2px solid rgba(92, 92, 92, 0.397);
-  width: 90%;
-  margin: 0 auto;
-}
-.shop__list ul {
-  display: flex;
-  justify-content: space-between;
-  text-align: center;
-  flex-direction: row;
-}
-.shop__list ul li {
-  padding: 1em 0;
-}
-.shop__list ul li a {
-  padding: 2m 0;
-}
-.shop__list ul li a:hover {
-  color: #eea539;
-  border-bottom: 3px solid #eea539;
-}
-.shop__container {
-  display: flex;
-  justify-content: space-around;
-  text-align: center;
-  flex-direction: row;
-  margin-top: 2.5em;
-}
-.shop__container div {
-  margin-left: 1em;
-}
-.shop__container div img {
-  text-align: center;
-}
-.shop__container div button {
-  font-size: 1rem;
-  background-color: #000;
-  color: white;
-  border: black;
-  padding: 1em 4em;
-  margin-top: -1em;
-  font-weight: bold;
-}
-.shop__container__variety {
-  width: 18vw;
-  background-color: #f4f7fb;
-  padding: 2em;
-  padding-top: 10em;
-  margin-top: -10em;
-}
-.shop__container__variety p {
-  padding: 1em 0;
-  color: rgba(92, 92, 92, 0.397);
 }
