--- a/css/layout/_nav.scss
+++ b/css/layout/_nav.scss
@@ -1,37 +1,69 @@
 @use "../utilities/mixins" as *;
 @use "../utilities/variables" as *;
 
-.nav{
-    padding: 1em 0;
-    background-color: $light-grey;
-    &__container{
-        @include flex(space-between,center);
-        &__left{
-            padding-top: 0.8em;
-        }
-        &__center{
-            ul{
-                @include flex(space-between,center);
-                padding-top: 1em;
-                li{
-                    font-size: 1.2rem;
-                    padding: 0 1em;
-                    a{
-                        padding: 1em;
-                        &:hover{
-                            background-color: $orange;
-                        }
-                    }
-                }
-            }
-        }
-        &__right{
-            ul{
-                @include flex(space-between,center);
-            }
-            img{
-                padding: 0 1em;
-            }
-        }
+.nav {
+  padding: 1em 0;
+  background-color: $light-grey;
+  &__container {
+    @include flex(space-between, center);
+    &__left {
+      padding-top: 0.8em;
     }
+    &__center {
+      ul {
+        @include flex(space-between, center);
+        padding-top: 1em;
+        li {
+          font-size: 1.2rem;
+          padding: 0 1em;
+
+          a {
+            padding: 1em;
+            &:hover {
+              background-color: $orange;
+            }
+          }
+        }
+      }
+    }
+    &__right {
+      ul {
+        @include flex(space-between, center);
+        li {
+          position: relative;
+          &:first-child:hover {
+            > span:last-child {
+              display: block;
+            }
+          }
+        }
+      }
+      img {
+        padding: 0 1em;
+      }
+      &__counter {
+        @include flex(center, center);
+        position: absolute;
+        right: 0;
+        top: -10px;
+        height: 30px;
+        width: 30px;
+        background-color: $orange;
+        border-radius: 50%;
+        color: black;
+      }
+      &__bar {
+        position: absolute;
+        top: 150%;
+        right: -100%;
+        width: 400px;
+        min-height: 200px;
+        box-shadow: -1px 1px 5px darkgray;
+        background-color: $white;
+        padding: 1em;
+        color: $black;
+        display: none;
+      }
+    }
+  }
 }
