--- a/css/utilities/_mixins.scss
+++ b/css/utilities/_mixins.scss
@@ -1,6 +1,6 @@
 @mixin flex($justify,$align,$direction:row){
     display: flex;
     justify-content: $justify;
-    text-align: $align;
+    align-items: $align;
     flex-direction: $direction;
     }
